fix navbar spacing

--- a/client/src/components/modules/Navbar.css
+++ b/client/src/components/modules/Navbar.css
@@ -43,14 +43,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 0px;
+  margin-top: 100px;
   padding-top: 0px;
 }
 
 .menu a {
   color: white;
   text-decoration: none;
-  margin: 0px 0;
+  margin: 10px 0;
   padding: 10px;
   font-size: var(--xxl);
 }
